--- a/PhillIDE.csproj
+++ b/PhillIDE.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assemblies.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Assemblies.Designer.cs">
+      <DependentUpon>Assemblies.cs</DependentUpon>
+    </Compile>
     <Compile Include="Code.cs" />
     <Compile Include="CodeEditor.cs">
       <SubType>Form</SubType>
@@ -63,6 +69,9 @@
     <Compile Include="CSCompiler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Assemblies.resx">
+      <DependentUpon>Assemblies.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CodeEditor.resx">
       <DependentUpon>CodeEditor.cs</DependentUpon>
     </EmbeddedResource>
